# ffi_flutter

./: README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/aws/arm64-v8a/external-install/curl/lib/pkgconfig/: libcurl.pc
android/src/main/aws/arm64-v8a/external-install/zlib/share/pkgconfig/: zlib.pc
android/src/main/aws/arm64-v8a/lib/cmake/AWSSDK/: AWSSDKConfigVersion.cmake  platformDeps.cmake
android/src/main/aws/arm64-v8a/lib/cmake/aws-cpp-sdk-cognito-idp/: aws-cpp-sdk-cognito-idp-targets.cmake
android/src/main/aws/arm64-v8a/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets.cmake
android/src/main/aws/arm64-v8a/lib/cmake/aws-cpp-sdk-sts/: aws-cpp-sdk-sts-targets.cmake
android/src/main/aws/armeabi-v7a/external-install/curl/lib/pkgconfig/: libcurl.pc
android/src/main/aws/armeabi-v7a/external-install/zlib/share/pkgconfig/: zlib.pc
android/src/main/aws/armeabi-v7a/include/aws/common/: config.h
android/src/main/aws/armeabi-v7a/lib/aws-c-cal/cmake/static/: aws-c-cal-targets.cmake
android/src/main/aws/armeabi-v7a/lib/aws-c-common/cmake/static/: aws-c-common-targets.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/AWSSDK/: AWSSDKConfigVersion.cmake  platformDeps.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/aws-cpp-sdk-cognito-identity/: aws-cpp-sdk-cognito-identity-targets-release.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/aws-cpp-sdk-cognito-idp/: aws-cpp-sdk-cognito-idp-targets-release.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/aws-cpp-sdk-iam/: aws-cpp-sdk-iam-config-version.cmake
android/src/main/aws/armeabi-v7a/lib/cmake/aws-cpp-sdk-identity-management/: aws-cpp-sdk-identity-management-targets.cmake
android/src/main/aws/armeabi-v7a/lib/s2n/cmake/static/: s2n-targets-release.cmake  s2n-targets.cmake
android/src/main/aws/x86/external-install/curl/lib/pkgconfig/: libcurl.pc
android/src/main/aws/x86/external-install/openssl/include/openssl/: opensslconf.h
android/src/main/aws/x86/external-install/zlib/share/pkgconfig/: zlib.pc
android/src/main/aws/x86/include/aws/crt/: Config.h
android/src/main/aws/x86/lib/aws-c-io/cmake/static/: aws-c-io-targets.cmake
android/src/main/aws/x86/lib/cmake/AWSSDK/: platformDeps.cmake
android/src/main/aws/x86/lib/cmake/aws-cpp-sdk-access-management/: aws-cpp-sdk-access-management-targets-release.cmake  aws-cpp-sdk-access-management-targets.cmake
android/src/main/aws/x86/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets.cmake
android/src/main/aws/x86/lib/cmake/aws-cpp-sdk-iam/: aws-cpp-sdk-iam-targets.cmake
android/src/main/aws/x86/lib/cmake/aws-cpp-sdk-sts/: aws-cpp-sdk-sts-targets-release.cmake
android/src/main/aws/x86/lib/cmake/testing-resources/: testing-resources-targets.cmake
android/src/main/aws/x86/lib/s2n/cmake/static/: s2n-targets.cmake
android/src/main/aws/x86_64/external-install/curl/lib/pkgconfig/: libcurl.pc
android/src/main/aws/x86_64/external-install/openssl/include/openssl/: opensslconf.h
android/src/main/aws/x86_64/external-install/zlib/share/pkgconfig/: zlib.pc
android/src/main/aws/x86_64/lib/cmake/AWSSDK/: platformDeps.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-access-management/: aws-cpp-sdk-access-management-config-version.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-cognito-identity/: aws-cpp-sdk-cognito-identity-targets.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-iam/: aws-cpp-sdk-iam-targets-release.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-identity-management/: aws-cpp-sdk-identity-management-targets-release.cmake
android/src/main/aws/x86_64/lib/cmake/aws-cpp-sdk-s3/: aws-cpp-sdk-s3-targets.cmake
android/src/main/aws/x86_64/lib/s2n/cmake/static/: s2n-targets.cmake
android/src/main/cpp/: Android.mk  image_filter.cpp  image_filter.h  native-lib.cpp  native_curl.cpp  opencvutil.h
android/src/main/kotlin/com/example/native_ffi/: NativeAddPlugin.kt
android/src/main/kotlin/com/sangcv/ffi_flutter/: FfiFlutterPlugin.kt  ImageFilterUtils.kt
android/src/main/kotlin/com/sangcv/ffi_flutter/activities/: CameraFilterActivity.kt
android/src/main/kotlin/com/sangcv/ffi_flutter/adapter/: ImageFilterAdapter.kt
android/src/main/kotlin/com/sangcv/ffi_flutter/camera/: PortraitCameraBridgeViewBase.java  PortraitCameraView.java
android/src/main/kotlin/com/sangcv/ffi_flutter/model/: DuoTomeParam.kt  ImageFilterData.kt
android/src/main/res/drawable/: border_image_filter.xml  ic_switch_camera.xml  round_button.xml
android/src/main/res/layout/: activity_main.xml  camera_filter.xml  image_filter.xml
android/src/main/res/values/: colors.xml  strings.xml
android/src/main/res/values-night/: themes.xml
android/src/main/zlib/arm64-v8a/lib/: libz.1.2.11.dylib
android/src/main/zlib/arm64-v8a/lib/pkgconfig/: zlib.pc
android/src/main/zlib/armeabi-v7a/lib/: libz.1.2.11.dylib
android/src/main/zlib/armeabi-v7a/lib/pkgconfig/: zlib.pc
android/src/main/zlib/x86/lib/: libz.1.2.11.dylib
android/src/main/zlib/x86/lib/pkgconfig/: zlib.pc
android/src/main/zlib/x86_64/lib/: libz.1.2.11.dylib
android/src/main/zlib/x86_64/lib/pkgconfig/: zlib.pc
cpp/: native_async.cpp  native_aws.cpp  native_curl.cpp  native_curl.h  native_opencv.cpp
cpp/general/: general_funtion.h
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/assets/: aws_credentials
example/lib/: main.dart  main_old.dart
example/test/: widget_test.dart
ios/: ffi_flutter.podspec  native_add.podspec  native_opencv.cpp
ios/Classes/: FfiFlutterPlugin.h  FfiFlutterPlugin.m  SwiftFfiFlutterPlugin.swift  main_include.cpp  native_add.cpp  native_opencv.cpp
lib/: ffi_flutter.dart  lib_curl.dart  native_add.dart  native_curl.dart  native_ffi.dart
lib/src/: native_aws.dart  native_curl.dart  (+4 more)
test/: ffi_flutter_test.dart
(+187 files in other folders)
